# mandelbrot-explorer

./: CMakeLists.txt  README.md  main.cpp
shaders/: fragment.glsl
